# sliptrans_app

./: CMakeLists.txt  README.md  robotpara.cpp  robotpara.hpp  sliptrans.cpp  sliptrans.hpp  test.cpp  test.hpp
IKQP/: hlqGeneralQPForm.cpp  hlqGeneralQPForm.hpp  hlqIkQPbased.cpp  hlqIkQPbased.hpp
IKQP/QP_Pierre/: QuadProg.cpp  QuadProg.h  solve.QP.c  solve.QP.compact.c  util.c  util.h
IKQP/QP_Pierre/f2c/: aind.c  daxpy.c  ddot.c  dpofa.c  dscal.c  f2c_lite.c
